--- a/sAddFeedback.html
+++ b/sAddFeedback.html
@@ -236,7 +236,7 @@
 
         // Function to redirect to the sAddFeedback2 page
         function redirectToFeedbackPage() {
-            window.location.href = "sAddFeedback2.html"; // Adjust the URL as needed
+            window.location.href = "sAddfeedback2.html"; // Adjust the URL as needed
         }
 
         // Call the function on page load
